--- a/index.html
+++ b/index.html
@@ -5,15 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Publisher info -->
+    <!-- publisher info -->
     <meta name="author" content="Camillo Rosanio">
     
-    <title>Viaggio a Lodnra</title>
+    <title>Viaggio a Londra</title>
 </head>
 
 
 <body>
- <!-- -->   
+    <!-- header-->   
+    <header>
+        <h1>Il mio Viaggio a Londra</h1>
+        <figure>
+            <img src="./img/header-fig1.jpg" alt="Londra figura 1di3">
+            <img src="./img/header-fig2.jpg" alt="Londra figura 2di3">
+            <img src="./img/header-fig3.jpg" alt="Londra figura 3di3">
+            <!-- <figcaption>Scorcio notturno di Londra</figcaption> -->
+        </figure>
+        <hr  />
+    </header>
+
+    <!-- page content-->
+    <main>
+
+
+    </main>
 
 </body>
 
