--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
                     </tr>
                 </tfoot>
             </table>
+            <hr  />
+        </div>
+
+        <div>
+            <h3>Cose da fare</h3>
+            <!-- to do list-->
+            <ul>
+                <li>Visitare la Tower of London &cross;</li>
+                <li>Visitare Greenwich &#10003;</li>
+                <li>Ascoltare un artista in strada a Covent Garden &#10003;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &cross;</li>
+            </ul>
+            <hr  />
         </div>
 
     </main>
