--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
     <!-- page content-->
     <main>
+        <!-- tickets table-->
         <div>
             <h2>Le mie spese</h2>
-            <!-- tickets table-->
             <table>
                 <thead>
                     <tr>
@@ -65,9 +65,9 @@
             <hr  />
         </div>
 
+        <!-- to do list-->
         <div>
             <h3>Cose da fare</h3>
-            <!-- to do list-->
             <ul>
                 <li>Visitare la Tower of London &cross;</li>
                 <li>Visitare Greenwich &#10003;</li>
@@ -77,7 +77,48 @@
             <hr  />
         </div>
 
+        <!-- useful info-->
+        <div>
+            <h2>Info utili:</h2>
+            <ol>
+                <li>
+                    <!-- sublist-->
+                    Numeri utili di emergenza
+                    <ul>
+                        <li> <b>999</b> - Emergenza</li>
+                        <li> <b>101</b> - Numero polizia</li>
+                        <li> <b>999</b> - Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <li>
+                    <!-- sublist 2-->
+                    Hotel
+                    <ul>
+                        <li> <b>Nome hotel</b>: Buckingham Palace</li>
+                        <li> <b>Indirizzo hotel</b>: Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li></li>
+                    <!-- sublist 3-->
+                    Aereo
+                    <ul>
+                        <li> <b>Volo di Andata</b>: YI234X, ore 9.30 da Milano Malpensa</li>
+                        <li> <b>Volo di Ritorno</b>: YI236X, ore 18.30 da London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+            <hr  />
+        </div>
     </main>
+
+    <footer>
+        <!-- London pictures-->
+        <figure>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Ponte moderno a Londra">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="London Bridge">
+            <!-- <figcaption>Varie foto di Londra</figcaption> -->
+        </figure>
+    </footer>
 
 </body>
 
