--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
 
     <footer>
         <!-- London pictures-->
+        <h2>Le foto</h2>
         <figure>
             <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Ponte moderno a Londra">
             <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="London Bridge">
