--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
             <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="London Bridge">
             <!-- <figcaption>Varie foto di Londra</figcaption> -->
         </figure>
+
+        <!-- link test-->
+         <a href="https://media.tenor.com/onTlUVMtWy4AAAAM/rickroll-rick.gif" target="_blank"> Per maggiori informazioni <b>clicca qui</b> </a>
     </footer>
 
 </body>
